# XSD-To-Typescript-Converter

./: .gitignore  CMakeLists.txt  LICENSE  README.md  SampleXSD.xml  build_cmds.txt  conanfile.txt
src/: CMakeLists.txt  conanfile.txt  main.cpp
src/tsgen/: CMakeLists.txt  SimpleType.cpp  SimpleType.h  TypescriptModule.cpp  TypescriptModule.h  TypescriptModuleFactory.cpp  TypescriptModuleFactory.h  simple_type.cpp  simple_type.h  typescript_module.cpp  typescript_module.h  typescript_module_factory.cpp  typescript_module_factory.h  typescript_primitive.h  xsd_primitive.h
src/tsgen/include/: TypescriptModule.h  TypescriptModuleFactory.h  XSDAllTypeElementProcessor.h  XSDComplexTypeElementProcessor.h  XSDDatetimeRestrictionElementProcessor.h  XSDDecimalRestrictionElementProcessor.h  XSDElementProcessor.h  XSDElementProcessorImp.h  XSDEnumerationsProcessor.h  XSDEnumerationsProcessorImp.h  XSDIntegerRestrictionElementProcessor.h  XSDRestrictionElementProcessor.h  XSDSequenceTypeElementProcessor.h  XSDSimpleTypeElementProcessor.h  XSDStringEnumerationsProcessor.h  XSDStringRestrictionElementProcessor.h  XSDToTypescriptParseTree.h
src/tsgen/restrictions/: StringRestrictionHandler.cpp
src/tsgen/src/: SimpleType.cpp  SimpleType.h  SimpleTypeImp.cpp  SimpleTypeImp.h  TypescriptModuleFactory.cpp  TypescriptModuleImp.cpp  TypescriptModuleImp.h  XSDAllTypeElementProcessor.cpp  XSDComplexTypeElementProcessor.cpp  XSDDatetimeRestrictionElementProcessor.cpp  XSDDecimalRestrictionElementProcessor.cpp  XSDElementProcessorImp.cpp  XSDEnumerationsProcessorImp.cpp  XSDIntegerRestrictionElementProcessor.cpp  XSDRestrictionElementProcessor.cpp  XSDSequenceTypeElementProcessor.cpp  XSDSimpleTypeElementProcessor.cpp  XSDStringEnumerationsProcessor.cpp  XSDStringRestrictionElementProcessor.cpp  XSDToTypescriptParseTree.cpp
src/tsgen/src/restrictions/: NumberRestrictionHandler.cpp  NumberRestrictionHandler.h  RestrictionHandler.cpp  RestrictionHandler.h  StringRestrictionHandler.cpp  StringRestrictionHandler.h
src/tsgen/test/: CMakeLists.txt
src/tsgen/test/src/: SimpleTypeImpTest.cpp  TypescriptModuleBuilderTest.cpp  TypescriptModuleImpTest.cpp  TypescriptModuleTest.cpp  XSDAllTypeElementProcessorTest.cpp  XSDComplexTypeElementProcessorTest.cpp  XSDDatetimeRestrictionElementProcessorTest.cpp  XSDDecimalRestrictionElementProcessorTest.cpp  XSDEnumerationProcessorImpTest.cpp  XSDIntegerRestrictionElementProcessorTest.cpp  XSDSequenceTypeElementProcessorTest.cpp  XSDSimpleTypeElementProcessorTest.cpp  XSDStringEnumerationsProcessorTest.cpp  XSDStringRestrictionElementProcessorTest.cpp  XSDToTypescriptParseTreeTest.cpp
src/tsgen/test/src/mocks/: MockEnumerationsProcessor.h  MockPascalCaseTextProcessor.h  MockSimpleType.h  MockXMLAttribute.h  MockXMLElement.h  MockXSDElementProcessor.h
src/tsgen/test/src/restrictions/: NumberRestrictionHandlerTest.cpp  StringRestrictionHandlerTest.cpp
src/util/: CMakeLists.txt  NotImplementedException.h
src/util/include/: NotImplementedException.h  PascalCaseTextProcessor.h  PascalCaseTextProcessorImp.h
src/util/src/: NotImplementedException.cpp  PascalCaseTextProcessorImp.cpp
src/util/test/: CMakeLists.txt
src/util/test/src/: NotImplementedExceptionTest.cpp  PascalCaseTextProcessorImpTest.cpp
src/xmlparse/: CMakeLists.txt  IncorrectXMLElementNameException.cpp  MissingXMLAttributeException.cpp  XMLAttribute.h  XMLAttributeImp.cpp  XMLAttributeImp.h  XMLAttributeProcessor.cpp  XMLElement.h  XMLElementImp.cpp  XMLElementImp.h  XMLElementNameToCamelCaseConverter.cpp  XMLElementNameToCamelCaseConverter.h  incorrect_xml_element_name_exception.cpp  missing_xml_attribute_exception.cpp  missing_xml_attribute_exception.h  xml_attribute_processor.cpp  xml_attribute_processor.h  xml_element_imp.cpp  xml_element_imp.h  xml_element_name_parser.cpp
src/xmlparse/XMLAttribute/: XMLAttribute.h  XMLAttributeAdapter.cpp  XMLAttributeAdapter.h  XMLNullAttribute.cpp  XMLNullAttribute.h
src/xmlparse/XMLElement/: XMLElement.h  XMLElementAdapter.cpp  XMLElementAdapter.h  XMLNullElement.cpp  XMLNullElement.h
src/xmlparse/include/: IncorrectXMLElementNameException.h  XMLAttribute.h  XMLElement.h  XMLElementAdapter.h  XMLElementNameToCamelCaseConverter.h
src/xmlparse/src/: IncorrectXMLElementNameException.cpp  MissingXMLAttributeException.cpp  XMLElementNameToCamelCaseConverter.cpp
src/xmlparse/src/XMLAttribute/: XMLAttributeAdapter.cpp  XMLAttributeAdapter.h  XMLNullAttribute.cpp  XMLNullAttribute.h
src/xmlparse/src/XMLElement/: XMLElementAdapter.cpp  XMLNullElement.cpp  XMLNullElement.h
src/xmlparse/test/: CMakeLists.txt
src/xmlparse/test/src/: IncorrectXSDElementNameExceptionTest.cpp  MissingXSDAttributeExceptionTest.cpp  XMLNullAttributeTest.cpp  XMLNullElementTest.cpp
test/: IncorrectXMLElementNameExceptionTest.cpp  MissingXMLAttributeExceptionTest.cpp  MockXMLAttribute.h  MockXMLElement.h  SimpleTypeTest.cpp  TypescriptModuleBuilderTest.cpp  TypescriptModuleTest.cpp  incorrect_xml_element_name_exception_test.cpp  missing_xml_attribute_exception_test.cpp  mock_xml_element.h  simple_type_test.cpp  typescript_module_builder_test.cpp  typescript_module_factory_test.cpp
test/xmlparse/: IncorrectXMLElementNameExceptionTest.cpp  MissingXMLAttributeExceptionTest.cpp  XMLNullAttributeTest.cpp  XMLNullElementTest.cpp
test/xmlparse/mocks/: MockXMLAttribute.h  MockXMLElement.h
test/xmlparse/restrictions/: StringRestrictionHandlerTest.cpp
